feat: implement initial reverse proxy architecture with network, HTTP, and routing layers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,23 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+
+# Async runtime
+tokio = { version = "1", features = ["full"] }
+
+# HTTP framework
+axum = "0.8"
+hyper = { version = "1", features = ["full"] }
+hyper-util = { version = "0.1", features = ["tokio"] }
+
+# Middleware
+tower = "0.5"
+tower-http = { version = "0.6", features = ["timeout", "limit", "request-id", "util", "trace"] }
+
+# Request ID
+uuid = { version = "1", features = ["v4"] }
+
+# Observability
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
