Phase 3: Load Balancing and Upstream Forwarding - Implement Backend abstraction with atomic connection accounting and max_connections limit - Implement RoundRobin and LeastConnections load balancers - Implement BackendManager for pool management - Update HttpServer to use hyper-util legacy client for forwarding - Add Upstream forwarding integration with URI rewriting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1", features = ["full"] }
 # HTTP framework
 axum = "0.8"
 hyper = { version = "1", features = ["full"] }
-hyper-util = { version = "0.1", features = ["tokio"] }
+hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1", "http2"] }
 
 # Middleware
 tower = "0.5"
