--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ uuid = { version = "1", features = ["v4"] }
 # Observability
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+rand = "0.8"
 
