Phase 7: Security & Abuse Protection - Finalize v1 - Implement TLS termination with axum-server - Implement IP-based rate limiting middleware - Implement X-Forwarded-* header propagation - Enforce request body limits and secure defaults

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ rand = "0.8"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.16"
 
+# Security
+axum-server = { version = "0.7", features = ["tls-rustls"] }
+rustls-pemfile = "2"
+
