Phase 8: Configuration & Hot Reload - Implement TOML config loader and semantic validation - Implement background file watcher using notify crate - Implement zero-downtime hot reload via ArcSwap and dynamic router dispatch - Generate default config.toml on first run

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,9 @@ metrics-exporter-prometheus = "0.16"
 axum-server = { version = "0.7", features = ["tls-rustls"] }
 rustls-pemfile = "2"
 
+# Configuration & Reload
+toml = "0.8"
+notify = "6"
+arc-swap = "1.7"
+
+
