Security hardening: Fix hardcoded secrets and improve .gitignore
- Updated .gitignore to exclude .env files, TLS keys, and sensitive configs

- Replaced hardcoded admin API key with CHANGE_ME_IN_PRODUCTION placeholder

- Cleaned up test private key usage in quoting engine

- Replaced unwrap() on mutex locks with expect() for better error messages

- Added security warnings for Grafana anonymous admin in docker-compose

- Updated CLI and schema defaults with production warnings

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
+# Build artifacts
 /target
+
+# Environment files (contain secrets)
+.env
+.env.*
+!.env.example
+
+# TLS certificates and keys
+*.pem
+*.key
+*.crt
+*.p12
+
+# User data
+subscriptions.json
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Local config overrides
+config.local.toml
