--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "reverse-proxy"
 version = "0.1.0"
 edition = "2021"
+default-run = "reverse-proxy"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
@@ -52,6 +53,7 @@ clap = { version = "4", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
 
 [dev-dependencies]
+sdk-rust = { path = "./sdk/rust" }
 
 
 
