--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -5,4 +5,4 @@ global:
 scrape_configs:
   - job_name: 'reverse-proxy'
     static_configs:
-      - targets: ['proxy:9090']
+      - targets: ['host.docker.internal:9090']
