docs: Replace internal README with public documentation
- Renamed old README to DEVELOPMENT_NOTES.md (excluded from git)

- Removed my-how-to.txt from tracking (contained private key)

- Created new comprehensive README with features, quick start, and API docs

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ Thumbs.db
 
 # Local config overrides
 config.local.toml
+
+# Internal development notes (not for public repo)
+DEVELOPMENT_NOTES.md
+my-how-to.txt
